main part completed

--- a/index.html
+++ b/index.html
@@ -161,15 +161,34 @@
 
 
 
-    <!-- final and footer section start from here  -->
+    <!-- final and footer section and support start from here  -->
 
-    <footer class="ftr">
+    <section class="ftr">
 
         <div class="support">
-            
+            <h1>I Need Support</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, eius incidunt nulla ipsam voluptatum corrupti harum iure? Quam, quis repellendus.</p>
+            <div class="int">
+                <input class="intput" type="text" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </div>
         </div>
 
+
+    </section>
+
+    <footer class="footer">
+        <h2>An Open Commitment By Md Sifat</h2>
+        <div class="links">
+            <a href="https://github.com/md-sifat" target="_blank"><img src="img/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/sifat725/" target="_blank"><img src="img/linkedin-icon 1.png" alt=""></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt=""></a>
+        </div>
+        
+
     </footer>
+
+
 
     <!-- full page structure end here  -->
 
